Sua frontend cua mot so giao dien

--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,12 @@
 }
 
 ::-moz-selection {
-  background-color: #55c57a;
+  background-color: #777;
   color: #fff;
 }
 
 ::selection {
-  background-color: #55c57a;
+  background-color: #777;
   color: #fff;
 }
 
@@ -118,10 +118,10 @@ body {
     linear,
     left top,
     right top,
-    from(#7dd56f),
-    to(#28b487)
+    from(#777),
+    to(#555)
   );
-  background-image: linear-gradient(to right, #7dd56f, #28b487);
+  background-image: linear-gradient(to right, #777, #555);
   -webkit-background-clip: text;
   color: transparent;
   letter-spacing: 0.1rem;
@@ -156,13 +156,13 @@ body {
     linear,
     left top,
     right bottom,
-    from(rgba(125, 213, 111, 0.85)),
-    to(rgba(40, 180, 135, 0.85))
+    from(rgba(119, 119, 119, 0.85)),
+    to(rgba(25, 113, 194, 0.85))
   );
   background-image: linear-gradient(
     to bottom right,
-    rgba(125, 213, 111, 0.85),
-    rgba(40, 180, 135, 0.85)
+    rgba(119, 119, 119, 0.85),
+    rgba(25, 113, 194, 0.85)
   );
 }
 
@@ -219,7 +219,7 @@ body {
 
 .btn:focus {
   outline: none;
-  background-color: #2e864b;
+  background-color: #333;
 }
 
 .btn--white {
@@ -231,11 +231,11 @@ body {
 }
 
 .btn--green {
-  background-color: #55c57a;
+  background-color: #777;
   color: #fff;
 }
 .btn--green::after {
-  background-color: #55c57a;
+  background-color: #777;
 }
 
 .btn--small {
@@ -246,7 +246,7 @@ body {
 .btn-small,
 .btn-small:link,
 .btn-small:visited {
-  background-color: #55c57a;
+  background-color: #777;
   color: #fff;
   font-size: 1.4rem;
   padding: 1.25rem 3rem;
@@ -262,22 +262,22 @@ body {
 }
 
 .btn-small:hover {
-  background-color: #7dd56f;
+  background-color: #555;
 }
 
 .btn-text:link,
 .btn-text:visited {
-  color: #55c57a;
+  color: #777;
   display: inline-block;
   text-decoration: none;
-  border-bottom: 1px solid #55c57a;
+  border-bottom: 1px solid #777;
   padding: 3px;
   -webkit-transition: all 0.2s;
   transition: all 0.2s;
 }
 
 .btn-text:hover {
-  background-color: #55c57a;
+  background-color: #777;
   color: #fff;
   -webkit-box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
@@ -294,7 +294,7 @@ body {
 
 .btn-text:focus {
   outline: none;
-  outline: 3px solid #55c57a;
+  outline: 3px solid #777;
   outline-offset: 3px;
 }
 
@@ -356,6 +356,7 @@ body {
     ),
     url(img/tours/tour-2-3.jpg);
   background-size: cover;
+  background-position: center;
 }
 
 .header__hero {
@@ -379,10 +380,10 @@ body {
     linear,
     left top,
     right bottom,
-    from(#7dd56f),
-    to(#28b487)
+    from(#777),
+    to(#555)
   );
-  background-image: linear-gradient(to right bottom, #7dd56f, #28b487);
+  background-image: linear-gradient(to right bottom, #777, #555);
   opacity: 0.85;
 }
 
@@ -490,7 +491,7 @@ body {
 .overview-box__icon {
   height: 2.25rem;
   width: 2.25rem;
-  fill: #55c57a;
+  fill: #777;
 }
 .overview-box__label {
   font-weight: 700;
@@ -588,10 +589,10 @@ body {
     linear,
     left top,
     right bottom,
-    from(#7dd56f),
-    to(#28b487)
+    from(#777),
+    to(#555)
   );
-  background: linear-gradient(to right bottom, #7dd56f, #28b487);
+  background: linear-gradient(to right bottom, #777, #555);
   clip-path: polygon(
     0 var(--section-rotate),
     100% 0,
@@ -676,7 +677,7 @@ body {
   margin-right: 1px;
 }
 .reviews__star--active {
-  fill: #55c57a;
+  fill: #777;
 }
 .reviews__star--inactive {
   fill: #bbb;
@@ -726,10 +727,10 @@ body {
     linear,
     left top,
     right bottom,
-    from(#7dd56f),
-    to(#28b487)
+    from(#777),
+    to(#555)
   );
-  background: linear-gradient(to right bottom, #7dd56f, #28b487);
+  background: linear-gradient(to right bottom, #777, #555);
   z-index: 10;
   -webkit-transform: translate(-35%, -50%);
   transform: translate(-35%, -50%);
@@ -783,10 +784,10 @@ body {
     linear,
     left top,
     right bottom,
-    from(#7dd56f),
-    to(#28b487)
+    from(#777),
+    to(#555)
   );
-  background-image: linear-gradient(to right bottom, #7dd56f, #28b487);
+  background-image: linear-gradient(to right bottom, #777, #555);
   padding: 4rem 0;
 }
 .user-view__content {
@@ -850,7 +851,7 @@ body {
 }
 .footer__nav a:hover,
 .footer__nav a:active {
-  color: #55c57a;
+  color: #777;
 }
 .footer__copyright {
   justify-self: end;
@@ -1120,10 +1121,15 @@ body {
     linear,
     left top,
     right bottom,
-    from(#7dd56f),
-    to(#28b487)
+    from(#777),
+    to(#555)
   );
-  background-image: linear-gradient(to right bottom, #7dd56f, #28b487);
+  /* background-image: linear-gradient(to right bottom, #777, #555); */
+  background-image: linear-gradient(
+    rgba(100, 100, 100, 0.6),
+    rgba(34, 34, 34, 0.6)
+  );
+  /* background-image: linear-gradient(to right bottom, #7dd56f, #28b487); */
   opacity: 0.7;
 }
 .card__picture-img {
@@ -1167,7 +1173,7 @@ body {
 .card__icon {
   height: 2rem;
   width: 2rem;
-  fill: #55c57a;
+  fill: #777;
 }
 .card__footer {
   background-color: #f7f7f7;
@@ -1261,7 +1267,7 @@ body {
 }
 .form__input:focus {
   outline: none;
-  border-bottom: 3px solid #55c57a;
+  border-bottom: 3px solid #777;
 }
 .form__input:focus:invalid {
   border-bottom: 3px solid #ff7730;
@@ -1308,22 +1314,22 @@ body {
 }
 
 .form__upload:focus + label {
-  outline: 3px solid #55c57a;
+  outline: 3px solid #777;
   outline-offset: 3px;
 }
 
 .form__upload + label {
-  color: #55c57a;
+  color: #777;
   display: inline-block;
   text-decoration: none;
-  border-bottom: 1px solid #55c57a;
+  border-bottom: 1px solid #777;
   padding: 3px;
   -webkit-transition: all 0.2s;
   transition: all 0.2s;
   cursor: pointer;
 }
 .form__upload + label:hover {
-  background-color: #55c57a;
+  background-color: #777;
   color: #fff;
   -webkit-box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
@@ -1353,7 +1359,7 @@ td {
 }
 
 thead tr {
-  background-color: #55c57a;
+  background-color: #777;
   color: #fff;
 }
 
@@ -1409,15 +1415,15 @@ tbody td:last-child {
       rgba(34, 34, 34, 0.6),
       rgba(34, 34, 34, 0.6)
     ),
-    url(img/tours/tour-1-1.jpg);
+    url(img/home-image-ver2.jpg);
   background-image: linear-gradient(
       to right bottom,
       rgba(34, 34, 34, 0.6),
       rgba(34, 34, 34, 0.6)
     ),
-    url(img/tours/tour-1-1.jpg);
+    url(img/home-image-ver2.jpg);
   background-size: cover;
-  background-position: top;
+  background-position: center;
   position: relative;
 }
 
