--- a/src/App.css
+++ b/src/App.css
@@ -303,7 +303,7 @@ body {
   padding: 0 5rem;
   height: 8rem;
   position: relative;
-  z-index: 100;
+  z-index: 1;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -526,15 +526,21 @@ body {
   );
   margin-top: calc(0px - var(--section-rotate));
   position: relative;
-  z-index: 1000;
+  z-index: 1;
 }
 
 .picture-box__img {
+  cursor: pointer;
   display: block;
   width: 100%;
   height: 110%;
   -o-object-fit: cover;
   object-fit: cover;
+  transition: 500ms;
+}
+
+.picture-box__img:hover {
+  transform: scale(1.1);
 }
 .picture-box__img--1 {
   padding-top: 15%;
@@ -584,7 +590,7 @@ body {
   margin-top: calc(0px - var(--section-rotate));
   padding: calc(5rem + var(--section-rotate)) 0;
   position: relative;
-  z-index: 1000;
+  z-index: 1;
   background: -webkit-gradient(
     linear,
     left top,
