--- a/src/components/HotelDetails/PictureLibraryModal/PictureLibraryModal.css
+++ b/src/components/HotelDetails/PictureLibraryModal/PictureLibraryModal.css
@@ -37,8 +37,8 @@
   transform: translate(-50%, -50%);
 
   /* transform: translate(-50%, -50%); */
-  max-width: 800px;
-  max-height: 600px;
+  width: 800px;
+  height: 600px;
   display: flex;
   align-items: center;
   justify-content: center;
