--- a/src/components/HotelFeatures/HotelFeatures.css
+++ b/src/components/HotelFeatures/HotelFeatures.css
@@ -9,3 +9,9 @@
   font-weight: 700;
   color: #495057;
 }
+
+.hotel-feature-text {
+  font-size: 1.5rem;
+  font-style: italic;
+  font-weight: 700;
+}
