--- a/src/components/RoomDetailModal/RoomDetailModal.css
+++ b/src/components/RoomDetailModal/RoomDetailModal.css
@@ -35,6 +35,7 @@
   box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
   z-index: 10;
   overflow-y: scroll;
+  color: #343a40;
 }
 
 .overlay {
@@ -106,4 +107,10 @@
 
 .order-room-button {
   text-align: center;
+}
+
+#modal--checkin-checkout-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
