Add checkout background image

--- a/src/pages/CheckoutSuccess/CheckoutSuccess.css
+++ b/src/pages/CheckoutSuccess/CheckoutSuccess.css
@@ -9,7 +9,7 @@
       rgba(34, 34, 34, 0.603),
       rgba(34, 34, 34, 0.603)
     ),
-    url(../../img/tours/tour-1-2.jpg);
+    url(../../img/checkout-success.jpg);
   background-size: cover;
 }
 
