--- a/src/components/Room/Room.css
+++ b/src/components/Room/Room.css
@@ -37,8 +37,9 @@ input[type="number"] {
   text-decoration: underline;
 }
 
-.bs-people-fill {
+.bs-people-fill, .bs-eye-fill {
   font-size: 2.4rem;
+  color: rgb(119, 119, 119);
 }
 
 .people-number {
@@ -46,6 +47,7 @@ input[type="number"] {
   margin-top: 2px;
   font-weight: 500;
 }
+
 .people-number-display-container {
   display: flex;
   align-items: center;
